--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -64,27 +64,27 @@
         android:src="@drawable/undraw_book_reader_2"
         android:padding="16dp"/>
 
-    <LinearLayout
-        android:id="@+id/settings_button_logout"
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:orientation="horizontal"
-        android:padding="16dp"
-        android:layout_marginBottom="16dp">
-      <ImageView
-          android:layout_width="44dp"
-          android:layout_height="match_parent"
-          android:src="@drawable/logout_icon"
-          app:tint="@color/colorIconDark"
-          android:layout_marginRight="16dp"/>
-      <TextView
-          android:layout_width="wrap_content"
-          android:layout_height="match_parent"
-          android:text="Log Out"
-          android:gravity="center"
-          android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
+<!--    <LinearLayout-->
+<!--        android:id="@+id/settings_button_logout"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="70dp"-->
+<!--        android:orientation="horizontal"-->
+<!--        android:padding="16dp"-->
+<!--        android:layout_marginBottom="16dp">-->
+<!--      <ImageView-->
+<!--          android:layout_width="44dp"-->
+<!--          android:layout_height="match_parent"-->
+<!--          android:src="@drawable/logout_icon"-->
+<!--          app:tint="@color/colorIconDark"-->
+<!--          android:layout_marginRight="16dp"/>-->
+<!--      <TextView-->
+<!--          android:layout_width="wrap_content"-->
+<!--          android:layout_height="match_parent"-->
+<!--          android:text="Log Out"-->
+<!--          android:gravity="center"-->
+<!--          android:textAppearance="@style/TextAppearance.AppCompat.Title"/>-->
 
-    </LinearLayout>
+<!--    </LinearLayout>-->
 
   </LinearLayout>
 
