--- a/app/src/main/res/layout/reqom.xml
+++ b/app/src/main/res/layout/reqom.xml
@@ -1,84 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:layout_width="match_parent"
+  android:layout_height="wrap_content">
+
+  <androidx.cardview.widget.CardView
+    android:layout_width="320dp"
     android:layout_height="wrap_content"
-    android:background="#FFFFFF"
+    app:cardCornerRadius="10dp"
     android:clipToPadding="false"
-    android:paddingVertical="10dp">
+    android:layout_centerHorizontal="true"
+    android:layout_margin="10dp">
+
     <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="wrap_content"
+      android:id="@+id/linearLayout"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_centerHorizontal="true"
+      android:padding="12dp"
+      android:orientation="vertical">
+
+      <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:background="@drawable/cardshape"
-        android:elevation="10dp"
-        android:padding="10dp"
-        android:orientation="vertical">
+        android:orientation="horizontal">
+
+        <ImageButton
+          android:id="@+id/reqom_book_image"
+          android:layout_width="48dp"
+          android:layout_height="48dp"
+          android:layout_marginRight="12dp"
+          android:background="@drawable/camera_circle"
+          app:srcCompat="@drawable/book_icon" />
 
         <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:orientation="vertical">
+
+          <TextView
+            android:id="@+id/reqom_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:elevation="10dp"
-            android:orientation="horizontal"
-            android:paddingVertical="5dp">
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:paddingHorizontal="5dp">
+            android:text="The Hobbit"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"/>
 
-                <ImageButton
-                    android:id="@+id/reqom_book_image"
-                    android:layout_width="42dp"
-                    android:layout_height="38dp"
-                    android:layout_weight="1"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginEnd="5dp"
-                    android:background="@drawable/camera_circle"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/book_icon" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
-            <LinearLayout
-                android:layout_width="256dp"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+          <TextView
+            android:id="@+id/reqom_author"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="J.R.R. Tolkein"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />
 
-                <TextView
-                    android:id="@+id/reqom_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="The Hobbit"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                    android:textSize="20sp" />
-
-                <TextView
-                    android:id="@+id/reqom_author"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="J.R.R. Tolkein"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                    android:textSize="12sp" />
-
-                <TextView
-                    android:id="@+id/reqom_isbn"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="ISBN: #1234567890123"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                    android:textSize="8sp" />
-
-            </LinearLayout>
-
+          <TextView
+            android:id="@+id/reqom_isbn"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="ISBN: #1234567890123"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"/>
 
         </LinearLayout>
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/reqom_request_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:elevation="10dp" />
+
+      </LinearLayout>
+
+      <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/reqom_request_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
     </LinearLayout>
+
+  </androidx.cardview.widget.CardView>
+
 </RelativeLayout>
