--- a/app/src/main/res/menu/book_edit_delete_menu.xml
+++ b/app/src/main/res/menu/book_edit_delete_menu.xml
@@ -5,14 +5,16 @@
         android:layout_width="10dp"
         android:icon="@drawable/edit_icon"
         android:iconTint="@color/colorIconDark"
-        android:title="Edit Book" />
+        android:title="Edit Book"
+        android:visible="false"/>
 
     <item
         android:id="@+id/delete_book"
         android:layout_width="10dp"
         android:icon="@drawable/delete_icon"
         android:iconTint="@color/colorError"
-        android:title="Delete Book" />
+        android:title="Delete Book"
+        android:visible="false"/>
 
     <item
       android:id="@+id/exchange_book"
