--- a/app/src/main/res/layout/reqbm.xml
+++ b/app/src/main/res/layout/reqbm.xml
@@ -91,7 +91,7 @@
         android:orientation="horizontal">
 
         <TextView
-          android:id="@+id/status"
+          android:id="@+id/reqbm_status"
           android:layout_width="fill_parent"
           android:layout_height="match_parent"
           android:layout_weight="1"
