--- a/app/src/main/res/menu/book_edit_delete_menu.xml
+++ b/app/src/main/res/menu/book_edit_delete_menu.xml
@@ -19,7 +19,7 @@
     <item
       android:id="@+id/exchange_book"
       android:layout_width="10dp"
-      android:icon="@drawable/delete_icon"
+      android:icon="@drawable/ic_baseline_autorenew_24"
       android:iconTint="@color/colorError"
       android:title="temp"
       android:visible="false"/>
