--- a/app/src/main/res/layout/accepted.xml
+++ b/app/src/main/res/layout/accepted.xml
@@ -56,7 +56,7 @@
           <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Giving to: "
+            android:text="Giving To: "
             android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"/>
 
           <TextView
