--- a/app/src/main/res/layout/fragment_owned.xml
+++ b/app/src/main/res/layout/fragment_owned.xml
@@ -4,6 +4,7 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
+    android:id="@+id/owned_fragment"
   tools:context=".book.OwnedFragment">
 
   <androidx.viewpager2.widget.ViewPager2
