--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -21,7 +21,7 @@
           android:id="@+id/settings_user_avatar"
           android:layout_width="58dp"
           android:layout_height="match_parent"
-          android:background="@color/colorPrimary"
+          android:background="@drawable/return_circle"
           android:text="U"
           android:gravity="center"
           android:textColor="@color/colorTextLight"
