Updates to map and updating of views (#131)
map improvements

--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -14,19 +14,17 @@
     android:name="com.google.android.gms.maps.SupportMapFragment"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.5"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     tools:context=".book.MapFragment" />
-
   <com.google.android.material.floatingactionbutton.FloatingActionButton
     android:id="@+id/map_confirm_pin"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginBottom="32dp"
-    android:layout_marginEnd="32dp"
+    android:layout_marginEnd="64dp"
     android:clickable="true"
-    android:src="@drawable/check_icon"
+    android:src="@drawable/ic_baseline_add_location_alt_24"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent" />
   <TextView
@@ -41,4 +39,30 @@
     android:textSize="15sp"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent" />
+  <RadioGroup
+    android:id="@+id/map_radio_group"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="64dp"
+    android:checkedButton="@id/map_filter_all"
+    android:orientation="horizontal"
+    android:theme="@style/AppTheme"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintStart_toStartOf="parent">
+    <RadioButton
+      android:id="@+id/map_filter_all"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:text="All" />
+    <RadioButton
+      android:id="@+id/map_filter_owner"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:text="Lending" />
+    <RadioButton
+      android:id="@+id/map_filter_borrower"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:text="Borrowing" />
+  </RadioGroup>
 </androidx.constraintlayout.widget.ConstraintLayout>
