--- a/app/src/main/res/layout/lent.xml
+++ b/app/src/main/res/layout/lent.xml
@@ -14,6 +14,7 @@
     android:layout_margin="10dp">
 
     <LinearLayout
+      android:id="@+id/background"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
